<resources>
    <string name="app_name">Inleggo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">Primer Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="hint_tipo_captura">Tipo de captura</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_numero">Numero</string>
    <string name="hint_tipo_sede">Tipo Sede</string>
    <string name="hint_tipo_gerencia">Gerencia</string>
    <string name="hint_tipo_area">Area</string>
    <string name="hint_tipo_equipo">Equipo</string>
    <string name="hint_tipo_local">Local</string>
    <string name="hint_tipo_piso">Piso</string>
    <string name="hint_tipo_ubicacion">Ubicacion</string>
    <string name="hint_tipo_usuario">Usuario</string>
    <string name="hint_tipo_proyecto">Proyecto</string>
    <string name="hint_nombre">Nombre</string>
    <string name="text_gerencias">Gerencias</string>
    <string name="text_gerencias_mensaje">Las gerencias son la parte más alta del organigrama, en lagunas instituciones cambia de nombre a oficinas o intendencias.</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_captura">Captura</string>
    <string name="nav_captura_nuevo">Nuevo</string>
    <string name="nav_captura_organigrama">Organigrama</string>
    <string name="nav_captura_organigrama_gerencia">Gerencia</string>
    <string name="nav_captura_organigrama_area">Area</string>
    <string name="nav_captura_organigrama_equipo">Equipo</string>
    <string name="name_navdrawer">José Cuentas Turpo</string>
    <string name="email_navdrawer">jcuentast@gmail.com</string>

    <!--ARRAYS-->

    <string-array name="ar_tipo_captura">
        <item>Bien</item>
        <item>Maquinaria</item>
        <item>Vehículo</item>
    </string-array>
    <string-array name="ar_tipo_sede">
        <item>CENECP - Callao</item>
        <item>Sede central</item>
    </string-array>
    <string-array name="ar_tipo_gerencia">
        <item>Centro Nacional de Estudios Criminológicos y Penitenciarios</item>
        <item>Dirección de Medio Libre</item>
        <item>Dirección de Registro Penitenciario</item>
        <item>Dirección de Seguridad Penitenciaria</item>
    </string-array>
    <string-array name="ar_tipo_area">
        <item>Centro Nacional de Estudios Criminológicos y Penitenciarios</item>
    </string-array>
    <string-array name="ar_tipo_equipo">
        <item>Centro Nacional de Estudios Criminológicos y Penitenciarios</item>
    </string-array>
    <string-array name="ar_tipo_local">
        <item>Local 1</item>
        <item>Local 2</item>
        <item>Local 3</item>
        <item>Local 4</item>
    </string-array>
    <string-array name="ar_tipo_piso">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="ar_tipo_ubicacion">
        <item>Repisa 1</item>
        <item>Repisa 2</item>
        <item>Repisa 3</item>
        <item>Repisa 4</item>
    </string-array>
    <string-array name="ar_tipo_usuario">
        <item>José Norberto Cuentas Turpo</item>
        <item>Joseph Urbina</item>
        <item>Pepe Felix</item>
        <item>Julieta Romero</item>
    </string-array>
    <string-array name="ar_tipo_proyecto">
        <item>Ninguno</item>
    </string-array>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="text_iniciar_sesion">Iniciar Sesión</string>
    <string name="text_olvido_pass">¿Olvidó su contraseña?</string>
    <string name="text_no_tiene_cuenta">¿No tienes una cuenta?</string>
    <string name="text_crea_cuenta">Crear</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hint_select_server">Seleccione el servidor</string>
    <string name="title_activity_MainActivityPrincipal">Menu</string>
</resources>
