<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context="com.jcuentas.inleggo.ui.fragment.CapOrgGerenciaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/sp_tipo_sede"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:ms_hint="@string/hint_tipo_gerencia" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_gerencias" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_gerencias_mensaje" />
    </LinearLayout>
</FrameLayout>
